--- a/_window-shared_hosting/Buy-Best-Window-shared-Hosting-service.html
+++ b/_window-shared_hosting/Buy-Best-Window-shared-Hosting-service.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="canonical" href="https://domgys.in/Buy-Best-Window-shared-Hosting_service.html">
 
-    <title>Buy Best Window shared Hosting (April 2024) - Domgys</title>
+    <title>Buy Best Windows Shared Hosting Service In India Of 2024 – Domgys
+</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -25,9 +26,9 @@
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <!-- typeed js -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script> -->
-    <meta name="keywords"
-        content="Linux Dedicated Hosting, Linux Server Hosting, Linux Dedicated Server Provider,  Customizable Linux Hosting, Dedicated Server Hosting.">
-    <meta name="description" content="Discover the best Linux dedicated hosting server in India with Domgys. Benefit from reliable and secure hosting solutions for your website.">
+    <meta name="keywords" content="Affordable Windows Hosting, Windows Shared Hosting , Windows Hosting for Small Business ,  Cheap Windows Hosting, Top Windows Hosting Providers, Windows Hosting Benefits , Windows Hosting Features .">
+    <meta name="description" content="Discover the best Windows shared hosting service in India for 2024 with Domgys. Reliable, affordable, and top-notch support for your website needs.">
+
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 
