--- a/_shared-hosting/shared-hosting.html
+++ b/_shared-hosting/shared-hosting.html
@@ -7,6 +7,8 @@
     <link rel="canonical" href="https://domgys.in/shared-hosting.html">
 
     <title>Buy Best Linux CPanel Shared Hosting In India - Domgys</title>
+
+    <link rel="shortcut icon" type="image/x-icon" href="./shared_hosting/img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
