--- a/_vps-hosting/vps-hosting.html
+++ b/_vps-hosting/vps-hosting.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="canonical" href="https://domgys.in/vps-hosting.html">
  <title>Buy Best Linux VPS Hosting Provider India 2024 - Domgys </title>
+
+ <link rel="shortcut icon" type="image/x-icon" href="./vps_assets/img/favicon.png">
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
