--- a/_window-shared_hosting/Buy-Best-Window-shared-Hosting-service.html
+++ b/_window-shared_hosting/Buy-Best-Window-shared-Hosting-service.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="canonical" href="https://domgys.in/Buy-Best-Window-shared-Hosting_service.html">
 
-    <title>Buy Best Windows Shared Hosting Service In India Of 2024 – Domgys  
-</title>
+    <title>Buy Best Windows Shared Hosting Service In India Of 2024 – Domgys </title>
+
+    <link rel="shortcut icon" type="image/x-icon" href="./window_shared/img/favicon.png">
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -22,7 +24,7 @@
     <link rel="stylesheet" href="./window_shared/css/header.css">
     <link rel="stylesheet" href="./window_shared/scss/main.css">
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
-    
+
     <!-- typeed js -->
 
 
